Update: Final Test Code for Challenge

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "TonyRobot",
+  "name": "tonyrobot",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Sachin Suthar",
+  "homepage": "http://localhost:4200/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -62,5 +62,5 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.2.4"
   },
-  "description": "An Ionic project"
+  "description": "Toy Simulator Project for Test ( Sachin Suthar)"
 }
